--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "alucard <devjrteste@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
