chore: criando ambientes de desenvolvimento e producao

--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
+  "scripts": {
+    "dev": "webpack serve",
+    "build": "cross-env Node_ENV=production webpack"
+  },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
