--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
+    "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "css": "^3.0.0",
