--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "style-loader": "^3.2.1"
   },
   "scripts": {
-    "start": "node server.js",
     "dev": "webpack serve",
-    "build": "cross-env Node_ENV=production webpack",
-
+    "build": "cross-env Node_ENV=production webpack"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
